# solana-meteor-simulator

./: .env  .gitignore  Anchor.toml  Cargo.toml  README.md  encode-key.cjs  my-test-wallet.key  package-lock.json  package.json  test-wallet.key  tsconfig.json
programs/solana-meteor/: Cargo.toml
programs/solana-meteor/src/: lib.rs
simulator/: tsconfig.json
simulator/src/: constants.ts  index.ts  meteora.ts  meteoraSimulator.ts  mockMeteoraSimulator.ts  mockSimulator.ts  poolDiscovery.ts  pools.ts  simulator.ts  solUsdcSwap.ts  utils.ts
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-300-AaxZLmCVzJB5Lfc5MfpHEptto5fp8Ks4wucY2ue7UwT3.tar.zst  snapshot-400-DpKvto7duAhYCwkdJCW1W5DAhAqiW6DBRitKGG9abB2i.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/accounts/run/: 200.4  300.5  400.6
test-ledger/accounts/snapshot/400/: 0.3  39.2  49.1
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1745525077144922  MANIFEST-000021  OPTIONS-000027  OPTIONS-000029
test-ledger/snapshot/400/: 400  status_cache
test-ledger/snapshot/400/accounts_hardlinks/: account_path_0
tests/: solana-meteor.ts
